Bug 1255401 - fix values allowed for "all" property; r=heycam

The "all" property in the devtools CSS database included all possible
property values; however only a few are truly appropriate.  This patch
adds a special case for "all" to
InspectorUtils::GetCSSValuesForProperty to fix this.

MozReview-Commit-ID: HEnrvCJylHI